# matchbook

./: .dockerignore  Cargo.toml  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  openapi.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml  security.yml
api/: Cargo.toml  Dockerfile
api/src/: error.rs  lib.rs  server.rs  state.rs
api/src/handlers/: accounts.rs  markets.rs  mod.rs  tx.rs
api/src/models/: mod.rs  request.rs  response.rs
api/src/routes/: mod.rs
crank/: Dockerfile
docs/: api-reference.md  cicd.md  docker.md  faq.md  getting-started.md  monitoring.md  sdk-guide.md  websocket-reference.md
docs/operations/: emergency-procedures.md  incident-response.md  maintenance.md
docs/runbooks/: README.md  api-errors.md  api-latency.md  crank-failures.md  crank-not-matching.md  crank-profitability.md  database-connections.md  disk-space.md  event-queue-full.md  high-cpu.md  high-memory.md  indexer-lag.md  service-down.md  websocket-connections.md
indexer/: Cargo.toml  Dockerfile
indexer/migrations/: 20260201000000_create_markets.sql  20260201000001_create_trades.sql  20260201000002_create_orders.sql  20260201000003_create_balances.sql  20260201000004_create_candles.sql  20260201000005_create_retention_policies.sql
indexer/src/: lib.rs  seed.rs
indexer/src/book/: builder.rs  metrics.rs  mod.rs  orderbook.rs  types.rs
indexer/src/cache/: config.rs  metrics.rs  mod.rs  pubsub.rs  store.rs
indexer/src/db/: mod.rs  models.rs  schema.rs
indexer/src/geyser/: config.rs  listener.rs  metrics.rs  mod.rs  types.rs
indexer/src/parser/: discriminators.rs  metrics.rs  mod.rs  types.rs
k8s/: README.md
k8s/base/: configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  secrets.yaml  serviceaccount.yaml
k8s/base/api/: deployment.yaml  hpa.yaml  service.yaml
k8s/base/crank/: deployment.yaml  service.yaml
k8s/base/indexer/: deployment.yaml  service.yaml
k8s/overlays/dev/: configmap-patch.yaml  kustomization.yaml  replicas-patch.yaml  secrets.env
k8s/overlays/prod/: configmap-patch.yaml  kustomization.yaml  replicas-patch.yaml  resources-patch.yaml  secrets.env
k8s/overlays/staging/: configmap-patch.yaml  kustomization.yaml  secrets.env
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: api.json  crank.json  indexer.json  market.json  overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/k8s/: alertmanager.yaml  grafana-config.yaml  prometheus-config.yaml  servicemonitor.yaml
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/alerts/: matchbook.yml
monitoring/prometheus/rules/: recording.yml
program/: Cargo.toml
program/src/: lib.rs
program/src/instructions/: cancel_all_orders.rs  cancel_order.rs  consume_events.rs  deposit.rs  mod.rs  place_order.rs  withdraw.rs
program/src/state/: event_queue.rs  market.rs  mod.rs  open_orders.rs  orderbook.rs
program/tests/: lifecycle.rs
program/tests/common/: fixtures.rs  mod.rs
scripts/: README.md  deploy-devnet.sh  init-market.sh
sdk/examples/: README.md  market_data.rs  user_data.rs
ts-sdk/: .eslintrc.json  README.md  package-lock.json  package.json  tsconfig.json
ts-sdk/examples/: README.md  market-data.ts  place-order.ts  simple-mm.ts  stream-book.ts
ts-sdk/src/: index.ts
ts-sdk/src/api/: index.ts  rest.ts  websocket.ts
ts-sdk/src/client/: config.ts  errors.ts  http.ts  index.ts  websocket.ts
ts-sdk/src/guards/: index.ts  validators.ts
ts-sdk/src/types/: balance.ts  book.ts  index.ts  market.ts  order.ts  primitives.ts  trade.ts
ts-sdk/tests/: client.test.ts  guards.test.ts
