[package]
name = "matchbook"
version = "0.1.0"
edition = "2021"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "High-performance, non-custodial Central Limit Order Book (CLOB) on Solana"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/matchbook.git"

[workspace]
members = [
    ".",
    "program",
    "indexer",
    "api",
]
resolver = "2"

[dependencies]

[workspace.dependencies]
# Solana / Anchor
anchor-lang = "0.32"
anchor-spl = "0.32"
solana-program = "3.0"

# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"
tokio-test = "0.4"
futures = "0.3"

# gRPC and Geyser
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "rust_decimal",
    "migrate",
] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-test = "15.7"
tower = { version = "0.5", features = ["limit", "buffer"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Decimal for precise numeric handling
rust_decimal = { version = "1.37", features = ["db-postgres"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Solana types
bs58 = "0.5"

# Internal crates
matchbook-indexer = { path = "indexer" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "warn"
needless_collect = "warn"
unnecessary_to_owned = "warn"
clone_on_ref_ptr = "warn"

[profile.release]
overflow-checks = true
