[package]
name = "matchbook-api"
version = "0.1.0"
edition = "2021"
authors = ["Matchbook Team"]
description = "REST API server for Matchbook CLOB"
license = "MIT"
repository = "https://github.com/joaquinbejar/matchbook"

[dependencies]
# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time handling
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Solana types
bs58 = { workspace = true }

# Internal dependencies
matchbook-indexer = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
axum-test = { workspace = true }

[features]
default = []

[lib]
name = "matchbook_api"
path = "src/lib.rs"
