[package]
name = "matchbook-indexer"
version = "0.1.0"
edition = "2021"
authors = ["Matchbook Team"]
description = "Off-chain indexer and database layer for Matchbook CLOB"
license = "MIT"
repository = "https://github.com/joaquinbejar/matchbook"

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# gRPC and Geyser
tonic = { workspace = true }
prost = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time handling
chrono = { workspace = true }

# Decimal for precise numeric handling
rust_decimal = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Solana types
bs58 = { workspace = true }

# Redis
redis = { workspace = true }
deadpool-redis = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[features]
default = []

[lib]
name = "matchbook_indexer"
path = "src/lib.rs"
